Update from master
Fixed ja guide links and updated 404 pages

--- a/partners/cms-plugins/index.html
+++ b/partners/cms-plugins/index.html
@@ -307,9 +307,9 @@ var utag_data = {
 
 <ul>
 <li><strong>Code Placement</strong><br />
-<a href="https://docs.tealium.com/platforms/javascript/install/#universal-tag-utag-js">Correct placement of the Universal Tag (<code>utag.js</code>)</a> on all pages of the site.</li>
+<a href="/platforms/javascript/install/#universal-tag-utag-js">Correct placement of the Universal Tag (<code>utag.js</code>)</a> on all pages of the site.</li>
 <li><strong>Data Layer</strong><br />
-Dynamically and accurately generate <a href="https://docs.tealium.com/platforms/javascript/install/#universal-data-object-utag-data">a data layer object</a> using built-in CMS page meta data.</li>
+Dynamically and accurately generate <a href="/platforms/javascript/install/#universal-data-object-utag-data">a data layer object</a> using built-in CMS page meta data.</li>
 <li><strong>Configuration Options</strong><br />
 Provide configuration settings such as account name, profile name, and environment.</li>
 </ul>
@@ -623,7 +623,7 @@ Provide configuration settings such as account name, profile name, and environme
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  February 24, 2021 
+    <span>This page was last updated:  March 10, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
