--- a/partners/data-sources/index.html
+++ b/partners/data-sources/index.html
@@ -321,7 +321,7 @@ Data sources send data into Tealium. A data source can a website, a CRM system, 
 
 <ul>
 <li><a href="https://community.tealiumiq.com/t5/Data-Layer/An-Introduction-to-the-Data-Layer/ta-p/15885">An Introduction to the Data Layer</a></li>
-<li><a href="https://docs.tealium.com/platforms/javascript/install/">JavaScript Install</a></li>
+<li><a href="/platforms/javascript/install/">JavaScript Install</a></li>
 </ul>
 
 <h2 id="api">API</h2>
@@ -344,7 +344,7 @@ Data sources send data into Tealium. A data source can a website, a CRM system, 
 <p>Learn More</p>
 
 <ul>
-<li><a href="https://docs.tealium.com/platforms/http-api/">Tealium HTTP API</a></li>
+<li><a href="/platforms/http-api/">Tealium HTTP API</a></li>
 </ul>
 
 <h2 id="benefits">Benefits</h2>
@@ -600,7 +600,7 @@ Tealium flattens the JSON body and prepends <code>mailchimp_</code> to all field
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  February 24, 2021 
+    <span>This page was last updated:  March 10, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
