--- a/platforms/getting-started/trace/index.html
+++ b/platforms/getting-started/trace/index.html
@@ -311,7 +311,7 @@ var utag_data = {
 
 <p>After clicking <strong>Start Trace</strong> in the tool, once per Customer Data Hub session, a QR code is automatically injected into the main browser window each time you start a new trace.</p>
 
-<p>QR codes are generated for each platform (<a href="https://docs.tealium.com/platforms/android-kotlin/">Android</a> or <a href="https://docs.tealium.com/platforms/ios-swift/">iOS</a>).  After you scan the appropriate QR code with the appropriate mobile device&rsquo;s camera, click the link from the QR code to start the app and pass trace parameters to the Tealium SDK.  The Tealium SDK recevies the trace ID (along with other parameters) and inserts the trace ID into the data layer for the current session</p>
+<p>QR codes are generated for each platform (<a href="/platforms/android-kotlin/">Android</a> or <a href="/platforms/ios-swift/">iOS</a>).  After you scan the appropriate QR code with the appropriate mobile device&rsquo;s camera, click the link from the QR code to start the app and pass trace parameters to the Tealium SDK.  The Tealium SDK recevies the trace ID (along with other parameters) and inserts the trace ID into the data layer for the current session</p>
 
 <p>All subsequent events are recorded in the trace session until you end the session or leave the trace. </p>
 
@@ -6631,7 +6631,7 @@ data.<span style="color:#008080">put</span>(<span style="color:#b84">&#34;cp.tra
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  November 11, 2020 
+    <span>This page was last updated:  March 10, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
