--- a/platforms/ios-swift-v1/release-notes/index.html
+++ b/platforms/ios-swift-v1/release-notes/index.html
@@ -405,7 +405,7 @@ var utag_data = {
 <li>Supports iOS apps that are enabled to run on macOS Catalina (10.15+)</li>
 </ul></li>
 
-<li><p>Lifecycle tracking methods are now available as part of the public API. <a href="https://docs.tealium.com/platforms/ios-swift/module-list/lifecycle/">Learn more</a>.</p></li>
+<li><p>Lifecycle tracking methods are now available as part of the public API. <a href="/platforms/ios-swift/module-list/lifecycle/">Learn more</a>.</p></li>
 
 <li><p><em>Optional</em> location tracking module. <a href="/platforms/ios-swift/module-list/location">Learn more</a>.</p></li>
 
@@ -7163,7 +7163,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  October 15, 2020 
+    <span>This page was last updated:  March 10, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
