--- a/platforms/ios-swift/release-notes/index.html
+++ b/platforms/ios-swift/release-notes/index.html
@@ -325,7 +325,7 @@ var utag_data = {
 <p><strong>New Features</strong></p>
 
 <ul>
-<li>Added the <a href="https://docs.tealium.com/platforms/ios-swift/track/#timed-events">Timed Events</a> feature which tracks the time between specified events.</li>
+<li>Added the <a href="/platforms/ios-swift/track/#timed-events">Timed Events</a> feature which tracks the time between specified events.</li>
 </ul>
 
 <p><strong>Low Impact Changes</strong></p>
@@ -363,8 +363,8 @@ var utag_data = {
 <p><strong>New Features</strong></p>
 
 <ul>
-<li>The remote commands feature was updated with a new option to use a remote or locally hosted JSON configuration files, removing the requirement for a webview. If using the Remote Command tag option, in iQ Tag Management, the webview is required. Learn more about <a href="https://docs.tealium.com/platforms/remote-commands/how-it-works/#json-configuration-file">JSON controlled remote commands</a>.</li>
-<li>Added support for <em>Approximate Location Tracking (iOS 14+)</em> with the function <code>requestTemporaryFullAccuracyAuthorization(purposeKey:)</code> through the <code>TealiumLocation</code> module. Learn more about the <a href="https://docs.tealium.com/platforms/ios-swift/module-list/location/#approximate-location-tracking-ios-14">iOS 14 Location Updates</a> and <a href="https://developer.apple.com/documentation/corelocation/cllocationmanager/3600217-requesttemporaryfullaccuracyauth">requesting temporary full authorization</a></li>
+<li>The remote commands feature was updated with a new option to use a remote or locally hosted JSON configuration files, removing the requirement for a webview. If using the Remote Command tag option, in iQ Tag Management, the webview is required. Learn more about <a href="/platforms/remote-commands/how-it-works/#json-configuration-file">JSON controlled remote commands</a>.</li>
+<li>Added support for <em>Approximate Location Tracking (iOS 14+)</em> with the function <code>requestTemporaryFullAccuracyAuthorization(purposeKey:)</code> through the <code>TealiumLocation</code> module. Learn more about the <a href="/platforms/ios-swift/module-list/location/#approximate-location-tracking-ios-14">iOS 14 Location Updates</a> and <a href="https://developer.apple.com/documentation/corelocation/cllocationmanager/3600217-requesttemporaryfullaccuracyauth">requesting temporary full authorization</a></li>
 </ul>
 
 <p><strong>Medium Impact Changes</strong></p>
@@ -6576,7 +6576,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 13, 2021 
+    <span>This page was last updated:  March 10, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
