--- a/platforms/react-native/install/index.html
+++ b/platforms/react-native/install/index.html
@@ -335,7 +335,7 @@ var utag_data = {
 
 <h3 id="android">Android</h3>
 
-<p>Add a reference to Tealium&rsquo;s Maven repository in your Android project&rsquo;s root <code>build.gradle</code> file as described in the <a href="https://docs.tealium.com/platforms/android/install/#maven-install">Android Maven Install</a> documentation. The project dependencies are automatically handled by the Autolinking process.</p>
+<p>Add a reference to Tealium&rsquo;s Maven repository in your Android project&rsquo;s root <code>build.gradle</code> file as described in the <a href="/platforms/android/install/#maven-install">Android Maven Install</a> documentation. The project dependencies are automatically handled by the Autolinking process.</p>
 
 <h3 id="ios">iOS</h3>
 
@@ -6536,7 +6536,7 @@ Tealium.initialize(config);
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  February 16, 2021 
+    <span>This page was last updated:  March 10, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
