--- a/platforms/remote-commands/integrations/appsflyer/index.html
+++ b/platforms/remote-commands/integrations/appsflyer/index.html
@@ -412,7 +412,7 @@ implementation <span style="color:#b84">&#39;com.tealium.remotecommands:appsflye
 
 <h3 id="manual-ios">Manual (iOS)</h3>
 
-<p>The manual installation for AppsFlyer remote commands requires the <a href="https://docs.tealium.com/platforms/ios-swift/">Tealium for Swift</a> library to be installed. To install the AppsFlyer remote commands for your iOS project:</p>
+<p>The manual installation for AppsFlyer remote commands requires the <a href="/platforms/ios-swift/">Tealium for Swift</a> library to be installed. To install the AppsFlyer remote commands for your iOS project:</p>
 
 <ol>
 <li><p>Install the <a href="https://github.com/AppsFlyerSDK/AppsFlyerFramework">AppsFlyer SDK</a>, if you haven&rsquo;t already done so.</p></li>
@@ -7507,7 +7507,7 @@ tealium = Tealium(config: config) { <span style="font-weight:bold">_</span> <spa
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  November 12, 2020 
+    <span>This page was last updated:  March 10, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
