--- a/404.html
+++ b/404.html
@@ -238,11 +238,15 @@ var utag_data = {
     
     <main role="main" class="content-with-sidebar pb7 pb0-ns">
       
-<main class="cf pa5 pa4-l f4 tc center measure-wide lh-copy gray">
-  <h1 class="f3 f2-ns">The page you're looking for doesn't exist.</h1>
-  <p><a href="https://support.tealiumiq.com/">support.tealiumiq.com</a></p>
-
-  
+<main class="cf f4 tc center measure-wide lh-copy gray">
+  <img src="/images/tealium/beast.jpeg" alt="Page Not Found"></img>
+  <h1>404 Error</h1>
+  <h4>Page Not Found</h4>
+  <p class="tl">The link you clicked may be broken or the page may have been removed. Here are some options:</p>
+  <ul class="tl">
+    <li>Use the search in the header to find what you’re looking for.</li>
+    <li>Go back to the home page to browse the site.</li>
+  </ul>
 </main>
 
     </main>
