--- a/platforms/remote-commands/integrations/kochava/index.html
+++ b/platforms/remote-commands/integrations/kochava/index.html
@@ -408,7 +408,7 @@ var utag_data = {
 
 <h3 id="manual-ios">Manual (iOS)</h3>
 
-<p>The manual installation for Kochava remote commands requires the <a href="https://docs.tealium.com/platforms/ios-swift/">Tealium for Swift</a> library to be installed. To install the Kochava remote commands for your iOS project:</p>
+<p>The manual installation for Kochava remote commands requires the <a href="/platforms/ios-swift/">Tealium for Swift</a> library to be installed. To install the Kochava remote commands for your iOS project:</p>
 
 <ol>
 <li><p>Install the <a href="https://support.kochava.com/sdk-integration/ios-sdk-integration/">Kochava SDK</a>, if you haven&rsquo;t already done so.</p></li>
@@ -977,7 +977,7 @@ teal = Tealium(config: config) { responses <span style="font-weight:bold">in</sp
 <tr>
 <td>Retrieve Attribution Data</td>
 <td><code>retrieve_attribution_data</code></td>
-<td>Boolean for setting a delegate/listener that gets the attribution data when ready. In <code>TealiumKochava</code> the <code>attributionDictionary</code> is set to <a href="https://docs.tealium.com/platforms/getting-started/mobile-concepts/#volatile-storage">Volatile Storage</a>, and sent a <code>track</code> call with a <code>tealium_event</code> of <code>attribution</code>. The delegate/listener method may be added in <code>TealiumKochavaTracker</code> (Learn more about <a href="https://support.kochava.com/sdk-integration/ios-sdk-integration/ios-using-the-sdk/?scrollto=marker_6">retrieving attribution</a>)</td>
+<td>Boolean for setting a delegate/listener that gets the attribution data when ready. In <code>TealiumKochava</code> the <code>attributionDictionary</code> is set to <a href="/platforms/getting-started/mobile-concepts/#volatile-storage">Volatile Storage</a>, and sent a <code>track</code> call with a <code>tealium_event</code> of <code>attribution</code>. The delegate/listener method may be added in <code>TealiumKochavaTracker</code> (Learn more about <a href="https://support.kochava.com/sdk-integration/ios-sdk-integration/ios-using-the-sdk/?scrollto=marker_6">retrieving attribution</a>)</td>
 <td><code>Bool</code></td>
 </tr>
 
@@ -7333,7 +7333,7 @@ teal = Tealium(config: config) { responses <span style="font-weight:bold">in</sp
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  November 12, 2020 
+    <span>This page was last updated:  March 10, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
