Update from master

--- a/partners/data-sources/index.html
+++ b/partners/data-sources/index.html
@@ -299,7 +299,7 @@ var utag_data = {
 
 <div class="flex justify-center bg-secondary ph3 pv4 mb3 br3 fr ml3"><img src="/images/icons/icon-data-chain-collect.png" alt="" width="100"  height="62" ></div>
 
-Data sources send data into Tealium. A data source can a website, a CRM system, a mobile SDK, a server-side application, or even a webhook. The number of possible data sources is endless, however there are only a two methods for sending data to Tealium: web-based and API-based. Choose the method that matches your platform to determine how you will send data to Tealium.</p>
+Data sources send data into Tealium. A data source can a website, a CRM system, a mobile SDK, a server-side application, or even a webhook. The number of possible data sources is endless, however there are two primary methods for sending data to Tealium: web-based and API-based. Choose the method that matches your platform to determine how you will send data to Tealium.</p>
 
 <h2 id="web">Web</h2>
 
@@ -600,7 +600,7 @@ Tealium flattens the JSON body and prepends <code>mailchimp_</code> to all field
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  March 10, 2021 
+    <span>This page was last updated:  March 26, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
