--- a/platforms/adobe-launch/install/index.html
+++ b/platforms/adobe-launch/install/index.html
@@ -252,7 +252,8 @@ var utag_data = {
       <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#requirements">Requirements</a></li>
               <li><a href="#how-it-works">How it Works</a></li>
               <li><a href="#install">Install</a></li>
-              <ul class="toc-h3"><li><a href="#configure">Configure</a></li>
+              <ul class="toc-h3"><li><a href="#data-layer-enrichment">Data Layer Enrichment</a></li>
+              <li><a href="#configure">Configure</a></li>
               </ul><li><a href="#track">Track</a></li>
               <li><a href="#source-code">Source Code</a></li>
               </nav>
@@ -309,7 +310,26 @@ var utag_data = {
 
 <h2 id="install">Install</h2>
 
-<p>To install, go to the Adobe Launch Marketplace then search for &ldquo;Tealium Collect&rdquo; and add the extension.</p>
+<p>To install the Tealium Collect extension:</p>
+
+<ol>
+<li>Go to the Adobe Launch Marketplace</li>
+<li>In the Extensions tab, search for the &ldquo;Tealium Collect&rdquo; extension</li>
+<li>Mouse over the extension and click <strong>Install</strong></li>
+<li>Set your configuration options, and then click <strong>Save</strong></li>
+</ol>
+
+<h3 id="data-layer-enrichment">Data Layer Enrichment</h3>
+
+<p>The Tealium Data Layer Enrichment extension brings server-side attributes from Tealium AudienceStream and injects them into the data layer.</p>
+
+<p>To install the Data Layer Enrichment extension:</p>
+
+<ol>
+<li>In Adobe Launch, search for &ldquo;Tealium&rdquo; in the <strong>Extensions</strong> catalog</li>
+<li>Install the &ldquo;Tealium Data Enrichment&rdquo; extension</li>
+<li>Set your configuration options, and then click <strong>Save</strong></li>
+</ol>
 
 <h3 id="configure">Configure</h3>
 
@@ -6507,7 +6527,7 @@ environment<span style="font-weight:bold">:</span> <span style="color:#b84">&#34
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  December 22, 2020 
+    <span>This page was last updated:  March 18, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
