--- a/platforms/csharp/release-notes/index.html
+++ b/platforms/csharp/release-notes/index.html
@@ -249,8 +249,8 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-1-1-0-july-2019">Version 1.1.0 (July 2019)</a></li>
-              <li><a href="#version-1-0-0-june-2017">Version 1.0.0 (June 2017)</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#1-1-0-july-2019">1.1.0 (July 2019)</a></li>
+              <li><a href="#1-0-0-june-2017">1.0.0 (June 2017)</a></li>
               </nav>
   </aside></div>
 
@@ -291,7 +291,7 @@ var utag_data = {
 
 <p>Below is a complete list of changes for each release of the C# library.</p>
 
-<h2 id="version-1-1-0-july-2019">Version 1.1.0 (July 2019)</h2>
+<h2 id="1-1-0-july-2019">1.1.0 (July 2019)</h2>
 
 <p><strong>High Impact Changes</strong></p>
 
@@ -311,7 +311,7 @@ var utag_data = {
 <li><code>.gitignore</code> file added to remove unnecessarily tracked compiled code.</li>
 </ul>
 
-<h2 id="version-1-0-0-june-2017">Version 1.0.0 (June 2017)</h2>
+<h2 id="1-0-0-june-2017">1.0.0 (June 2017)</h2>
 
 <ul>
 <li>Event Tracking<br />
@@ -6478,7 +6478,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 23, 2020 
+    <span>This page was last updated:  March 18, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
