--- a/platforms/javascript/universal-data-object/index.html
+++ b/platforms/javascript/universal-data-object/index.html
@@ -322,7 +322,7 @@ var utag_data = {
 <li><strong>String Values</strong><br />
 Use string values for all variables, including boolean and numeric data.</li>
 <li><strong>Escape Quotes</strong><br />
-Enclose all values in double quotes or single quotes and escape any quotes that might appear in the value itself. For example, <code>utag_data.page_name = 'It's All About the Data!';</code>.</li>
+Enclose all values in double quotes or single quotes and escape any quotes that might appear in the value itself. For example, <code>utag_data.page_name = 'It\'s All About the Data!';</code>.</li>
 <li><strong>Boolean Values</strong><br />
 For boolean values use <code>&quot;1&quot;</code> and <code>&quot;0&quot;</code> to represent <code>true</code> and <code>false</code>. This is the simplest way to represent a boolean using strings.</li>
 <li><strong>Amount Values</strong><br />
@@ -6559,7 +6559,7 @@ utag_data[<span style="color:#b84">&#34;product_quantity&#34;</span>] <span styl
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  March 11, 2021 
+    <span>This page was last updated:  April 9, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
