--- a/platforms/xamarin/release-notes/index.html
+++ b/platforms/xamarin/release-notes/index.html
@@ -249,8 +249,8 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-1-0-1-nov-2019">Version 1.0.1 - Nov 2019</a></li>
-              <li><a href="#version-1-0-0-dec-2018">Version 1.0.0 - Dec 2018</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#1-0-1-november-2019">1.0.1 (November 2019)</a></li>
+              <li><a href="#1-0-0-december-2018">1.0.0 (December 2018)</a></li>
               </nav>
   </aside></div>
 
@@ -291,7 +291,7 @@ var utag_data = {
 
 <p>Below is a complete list of changes for each release of the Xamarin library.</p>
 
-<h2 id="version-1-0-1-nov-2019">Version 1.0.1 - Nov 2019</h2>
+<h2 id="1-0-1-november-2019">1.0.1 (November 2019)</h2>
 
 <ul>
 <li>Updated embedded Android SDK to 5.6.0</li>
@@ -299,9 +299,11 @@ var utag_data = {
 <li>Updated sample app dependencies</li>
 </ul>
 
-<h2 id="version-1-0-0-dec-2018">Version 1.0.0 - Dec 2018</h2>
+<h2 id="1-0-0-december-2018">1.0.0 (December 2018)</h2>
 
-<p>Initial Release</p>
+<ul>
+<li>Initial Release</li>
+</ul>
 
 </div>
 
@@ -6455,7 +6457,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  December 12, 2019 
+    <span>This page was last updated:  March 18, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
