--- a/platforms/android-kotlin/release-notes/index.html
+++ b/platforms/android-kotlin/release-notes/index.html
@@ -249,9 +249,13 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#0-1-2-october-2020">0.1.2 (October 2020)</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#1-2-2-march-2021">1.2.2 (March 2021)</a></li>
+              <li><a href="#1-2-1-march-2021">1.2.1 (March 2021)</a></li>
+              <li><a href="#1-2-0-january-2021">1.2.0 (January 2021)</a></li>
+              <li><a href="#1-1-0-november-2020">1.1.0 (November 2020)</a></li>
+              <li><a href="#0-1-2-october-2020">0.1.2 (October 2020)</a></li>
               <li><a href="#0-1-1-september-2020">0.1.1 (September 2020)</a></li>
-              <li><a href="#0-1-0-initial-release-july-2020">0.1.0 Initial Release (July 2020)</a></li>
+              <li><a href="#0-1-0-july-2020">0.1.0 (July 2020)</a></li>
               </nav>
   </aside></div>
 
@@ -292,6 +296,94 @@ var utag_data = {
 
 <p>Below is a list of changes for each release of the Android Kotlin library.  See the <a href="https://github.com/Tealium/tealium-kotlin/blob/master/CHANGELOG.md">Change Log</a> for a complete list.</p>
 
+<h2 id="1-2-2-march-2021">1.2.2 (March 2021)</h2>
+
+<ul>
+<li>Core 1.2.2
+
+<ul>
+<li>Added <code>request_uuid</code> to event and view payload</li>
+</ul></li>
+<li>TagManagement Dispatcher 1.0.4, RemoteCommand Dispatcher 1.0.3
+
+<ul>
+<li>Bug Fix: Routed <code>HttpRemoteCommand</code> to background thread for execution</li>
+</ul></li>
+</ul>
+
+<h2 id="1-2-1-march-2021">1.2.1 (March 2021)</h2>
+
+<ul>
+<li>Proguard and Consumer Rules revision; added missing public classes, and the consumer rules have been revised</li>
+<li>Core 1.2.1, Collect Dispatcher 1.0.3, TagManagement Dispatcher 1.0.3, Install Referrer 1.0.2, Lifecycle 1.0.3, Location 1.0.3, VisitorService 1.0.3, RemoteCommand Dispatcher 1.0.2, Hosted DataLayer 1.0.2, Crash Reporter 1.0.1, Ad Identifier 1.0.1</li>
+</ul>
+
+<h2 id="1-2-0-january-2021">1.2.0 (January 2021)</h2>
+
+<ul>
+<li>Consent Management
+
+<ul>
+<li>Consent Expiration: Introduced the ability to set an expiration for provided consent</li>
+<li>Deprecated <code>consentManagerEnabled</code> config property; setting a valid ConsentPolicy automatically enabled the Consent Manager</li>
+<li>Bug Fix: Incorrect consent collector logic</li>
+</ul></li>
+<li>Visitor ID: New method manually regenerates a Visitor ID for the device
+
+<ul>
+<li>Proguard: Initial proguard rules added to generated binaries and consumer proguard rules</li>
+</ul></li>
+<li>AdIdentifier 1.0.0
+
+<ul>
+<li>Initial release of the AdIdentifier module: if available, AdIdentifier is added to each Dispatch</li>
+</ul></li>
+<li>CrashReporter 1.0.0
+
+<ul>
+<li>Initial release of the CrashReporter module: uncaught exceptions causing a crash are recorded and any crash data is sent on the next dispatch when the app launches again</li>
+</ul></li>
+<li>Collect Dispatcher 1.0.2, Hosted DataLayer 1.0.1, InstallReferrer 1.0.1, Lifecycle 1.0.2, Location 1.0.2, RemoteCommand Dispatcher 1.0.1, TagManagement Dispatcher 1.0.1, Visitor Service 1.0.2
+
+<ul>
+<li>Proguard - Initial proguard rules added to generated binaries and consumer proguard rules</li>
+</ul></li>
+</ul>
+
+<h2 id="1-1-0-november-2020">1.1.0 (November 2020)</h2>
+
+<ul>
+<li>Timed Events support for reporting the time taken between user events of interest</li>
+<li>New <code>device_model</code> and <code>device_manufacturer</code> data keys provided by the <code>DeviceCollector</code></li>
+<li>Automated unit and instrumented tests for PRs into master using Github Actions</li>
+<li>Collect Dispatcher 1.0.1
+
+<ul>
+<li>Additional Collect URL overrides</li>
+<li>Test coverage increase</li>
+</ul></li>
+<li>Hosted Datalayer 1.0.0
+
+<ul>
+<li>Test coverage increase</li>
+</ul></li>
+<li>Lifecycle 1.0.1
+
+<ul>
+<li>Bug Fix: Missing autotracked key on sleep events</li>
+<li>Test coverage increase</li>
+<li>Location 1.0.1</li>
+<li>Bug Fix: Issue with automatically adding nearby geofences</li>
+<li>Test coverage increase</li>
+</ul></li>
+<li>Visitor Service 1.0.1
+
+<ul>
+<li>Non-breaking change for testability purposes</li>
+<li>Test coverage increase</li>
+</ul></li>
+</ul>
+
 <h2 id="0-1-2-october-2020">0.1.2 (October 2020)</h2>
 
 <ul>
@@ -310,9 +402,10 @@ var utag_data = {
 <li>Additional Dispatch payload logging</li>
 </ul>
 
-<h2 id="0-1-0-initial-release-july-2020">0.1.0 Initial Release (July 2020)</h2>
+<h2 id="0-1-0-july-2020">0.1.0 (July 2020)</h2>
 
 <ul>
+<li>Initial release</li>
 <li>Tealium Tag Management support</li>
 <li>Collect support</li>
 </ul>
@@ -6470,7 +6563,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  October 15, 2020 
+    <span>This page was last updated:  March 18, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
