--- a/platforms/ios-swift/data-layer/index.html
+++ b/platforms/ios-swift/data-layer/index.html
@@ -470,7 +470,7 @@ var utag_data = {
 <tr>
 <td><code>app_uuid</code></td>
 <td>Random <code>uuid</code>. Persists for the duration of the app install, so long as one of the persistent storage modules is also enabled. Resets if app is uninstalled.</td>
-<td><code>t3aL...1uM</code></td>
+<td><code>123e4567-e89b-12d3-a456-556642440000</code></td>
 </tr>
 
 <tr>
@@ -620,6 +620,12 @@ var utag_data = {
 <td>Unique ID guaranteed to be the same across all apps on the same device from a single vendor (apps with the same 1st 2 parts of the RDNS bundle identifier. For example, com.tealium or com.acme)</td>
 <td><code>6D92078A-8246...</code></td>
 </tr>
+
+<tr>
+<td><code>device_tracking_authorization</code></td>
+<td>The tracking <a href="https://developer.apple.com/documentation/apptrackingtransparency/attrackingmanager/authorizationstatus">authorization status</a> that is added to the dispatch payload</td>
+<td><code>authorized</code></td>
+</tr>
 </tbody>
 </table>
 
@@ -684,7 +690,7 @@ var utag_data = {
 <tr>
 <td><code>consent_categories</code></td>
 <td>An array of the user&rsquo;s selected consent categories</td>
-<td><code>analytics</code>, <code>cdp</code></td>
+<td><code>[&quot;analytics&quot;, &quot;cdp&quot;]</code></td>
 </tr>
 
 <tr>
@@ -1048,18 +1054,6 @@ var utag_data = {
 </tr>
 
 <tr>
-<td><code>cpu_architecture</code></td>
-<td>CPU architecture</td>
-<td><code>64</code></td>
-</tr>
-
-<tr>
-<td><code>cpu_type</code></td>
-<td>CPU type</td>
-<td><code>ARM64v8</code></td>
-</tr>
-
-<tr>
 <td><code>device</code></td>
 <td>Consumer device name</td>
 <td><code>iPhone 7 Plus</code></td>
@@ -1080,7 +1074,7 @@ var utag_data = {
 <tr>
 <td><code>device_cputype</code></td>
 <td>Device CPU type</td>
-<td><code>Intel</code></td>
+<td><code>ARM64v8</code></td>
 </tr>
 
 <tr>
@@ -1092,7 +1086,7 @@ var utag_data = {
 <tr>
 <td><code>device_language</code></td>
 <td>Current device language</td>
-<td><code>en</code></td>
+<td><code>en-US</code></td>
 </tr>
 
 <tr>
@@ -1174,39 +1168,9 @@ var utag_data = {
 </tr>
 
 <tr>
-<td><code>network_connection_type</code></td>
-<td>Current connection type</td>
-<td><code>wifi</code>, <code>cellular</code></td>
-</tr>
-
-<tr>
 <td><code>network_iso_country_code</code></td>
 <td>Mobile network ISO country code</td>
 <td><code>gb</code></td>
-</tr>
-
-<tr>
-<td><code>network_mcc</code></td>
-<td><a href="https://en.wikipedia.org/wiki/Mobilecountrycode">Network mobile country code</a></td>
-<td><code>234</code></td>
-</tr>
-
-<tr>
-<td><code>network_mnc</code></td>
-<td><a href="https://en.wikipedia.org/wiki/Mobilecountrycode">Network mobile network code</a></td>
-<td><code>34</code></td>
-</tr>
-
-<tr>
-<td><code>network_name</code></td>
-<td>Mobile network carrier name</td>
-<td><code>EE</code></td>
-</tr>
-
-<tr>
-<td><code>os_build</code></td>
-<td>Operating System Build Version</td>
-<td><code>15J580</code></td>
 </tr>
 
 <tr>
@@ -1216,21 +1180,9 @@ var utag_data = {
 </tr>
 
 <tr>
-<td><code>os_version</code></td>
-<td>Operating system version</td>
-<td><code>11.1</code></td>
-</tr>
-
-<tr>
 <td><code>platform</code></td>
 <td>Operating System Name</td>
 <td><code>iOS</code>, <code>tvOS</code>, <code>watchOS</code>, <code>macOS</code></td>
-</tr>
-
-<tr>
-<td><code>user_locale</code></td>
-<td>Current device language</td>
-<td><code>en</code></td>
 </tr>
 </tbody>
 </table>
@@ -7640,7 +7592,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  November 10, 2020 
+    <span>This page was last updated:  April 1, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
