--- a/platforms/ios-swift/release-notes/index.html
+++ b/platforms/ios-swift/release-notes/index.html
@@ -249,12 +249,12 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-2-2-2-2021">Version 2.2.2 (2021)</a></li>
-              <li><a href="#version-2-2-1-2021">Version 2.2.1 (2021)</a></li>
-              <li><a href="#version-2-2-0-2020">Version 2.2.0 (2020)</a></li>
-              <li><a href="#version-2-1-1-2020">Version 2.1.1 (2020)</a></li>
-              <li><a href="#version-2-1-0-2020">Version 2.1.0 (2020)</a></li>
-              <li><a href="#version-2-0-0-2020">Version 2.0.0 (2020)</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#2-2-2-january-2021">2.2.2 (January 2021)</a></li>
+              <li><a href="#2-2-1-january-2021">2.2.1 (January 2021)</a></li>
+              <li><a href="#2-2-0-november-2020">2.2.0 (November 2020)</a></li>
+              <li><a href="#2-1-1-october-2020">2.1.1 (October 2020)</a></li>
+              <li><a href="#2-1-0-october-2020">2.1.0 (October 2020)</a></li>
+              <li><a href="#2-0-0-july-2020">2.0.0 (July 2020)</a></li>
               </nav>
   </aside></div>
 
@@ -295,9 +295,7 @@ var utag_data = {
 
 <p>Below is a complete list of changes for each release of the Tealium for Swift library.</p>
 
-<h2 id="version-2-2-2-2021">Version 2.2.2 (2021)</h2>
-
-<p><strong>Released:</strong> January 2021</p>
+<h2 id="2-2-2-january-2021">2.2.2 (January 2021)</h2>
 
 <p><strong>Low Impact Changes</strong></p>
 
@@ -307,9 +305,7 @@ var utag_data = {
 <li>Removed Lifecycle listeners on deinitialization of Tealium.</li>
 </ul>
 
-<h2 id="version-2-2-1-2021">Version 2.2.1 (2021)</h2>
-
-<p><strong>Released:</strong> January 2021</p>
+<h2 id="2-2-1-january-2021">2.2.1 (January 2021)</h2>
 
 <p><strong>Low Impact Changes</strong></p>
 
@@ -318,9 +314,7 @@ var utag_data = {
 <li>Re-added <code>TealiumAttribution</code> scheme within <code>tealium-swift.xcodeproj</code> which permits the framework to be built by Carthage.</li>
 </ul>
 
-<h2 id="version-2-2-0-2020">Version 2.2.0 (2020)</h2>
-
-<p><strong>Released:</strong> November 2020</p>
+<h2 id="2-2-0-november-2020">2.2.0 (November 2020)</h2>
 
 <p><strong>New Features</strong></p>
 
@@ -337,9 +331,7 @@ var utag_data = {
 <li>Added <code>device_manufacturer</code> to the data layer.</li>
 </ul>
 
-<h2 id="version-2-1-1-2020">Version 2.1.1 (2020)</h2>
-
-<p><strong>Released:</strong> October 2020</p>
+<h2 id="2-1-1-october-2020">2.1.1 (October 2020)</h2>
 
 <p><strong>New Features</strong></p>
 
@@ -356,9 +348,7 @@ var utag_data = {
 
 <p>Learn more about <a href="/platforms/ios-swift/module-list/attribution/#attribution-in-ios-14">Attribution in iOS 14+</a> and about support for <code>ATTransparency</code> and <code>SKAdNetwork</code>.</p>
 
-<h2 id="version-2-1-0-2020">Version 2.1.0 (2020)</h2>
-
-<p><strong>Released:</strong> October 2020</p>
+<h2 id="2-1-0-october-2020">2.1.0 (October 2020)</h2>
 
 <p><strong>New Features</strong></p>
 
@@ -380,9 +370,7 @@ var utag_data = {
 <li>Add <code>origin: mobile</code> to the track payload</li>
 </ul>
 
-<h2 id="version-2-0-0-2020">Version 2.0.0 (2020)</h2>
-
-<p><strong>Released:</strong> July 2020</p>
+<h2 id="2-0-0-july-2020">2.0.0 (July 2020)</h2>
 
 <p><strong>New Features</strong></p>
 
@@ -6576,7 +6564,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  March 10, 2021 
+    <span>This page was last updated:  March 18, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
