--- a/platforms/java/release-notes/index.html
+++ b/platforms/java/release-notes/index.html
@@ -249,12 +249,12 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-1-3-1">Version 1.3.1</a></li>
-              <li><a href="#version-1-3-0">Version 1.3.0</a></li>
-              <li><a href="#version-1-2-0">Version 1.2.0</a></li>
-              <li><a href="#version-1-1-0">Version 1.1.0</a></li>
-              <li><a href="#version-1-0-1">Version 1.0.1</a></li>
-              <li><a href="#version-1-0-0-initial">Version 1.0.0 (Initial)</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#1-3-1">1.3.1</a></li>
+              <li><a href="#1-3-0">1.3.0</a></li>
+              <li><a href="#1-2-0">1.2.0</a></li>
+              <li><a href="#1-1-0">1.1.0</a></li>
+              <li><a href="#1-0-1">1.0.1</a></li>
+              <li><a href="#1-0-0-initial">1.0.0 (Initial)</a></li>
               </nav>
   </aside></div>
 
@@ -293,13 +293,13 @@ var utag_data = {
 <div class="prose" id="prose">
   
 
-<h2 id="version-1-3-1">Version 1.3.1</h2>
+<h2 id="1-3-1">1.3.1</h2>
 
 <ul>
 <li>BugFix - Updated track method to use a copy of Persistent Data to stop event data unexpectedly being stored.</li>
 </ul>
 
-<h2 id="version-1-3-0">Version 1.3.0</h2>
+<h2 id="1-3-0">1.3.0</h2>
 
 <ul>
 <li>Remove <code>visitor_id</code> and switch to <code>&quot;event&quot;</code> endpoint</li>
@@ -310,7 +310,7 @@ var utag_data = {
 <li>Lots of refactoring and introduction of TDD practices to encourage more maintainable code in the library.</li>
 </ul>
 
-<h2 id="version-1-2-0">Version 1.2.0</h2>
+<h2 id="1-2-0">1.2.0</h2>
 
 <ul>
 <li>Add Datasource</li>
@@ -319,7 +319,7 @@ var utag_data = {
 <li>Bug fix for unit test</li>
 </ul>
 
-<h2 id="version-1-1-0">Version 1.1.0</h2>
+<h2 id="1-1-0">1.1.0</h2>
 
 <ul>
 <li>New variable <code>tealium_event_type</code> added</li>
@@ -336,13 +336,13 @@ var utag_data = {
 <li>Removal of convenience retry <code>track(string, callBack)</code></li>
 </ul>
 
-<h2 id="version-1-0-1">Version 1.0.1</h2>
+<h2 id="1-0-1">1.0.1</h2>
 
 <ul>
 <li>Bug Fix - <code>LogLevel</code> enum converted to public API</li>
 </ul>
 
-<h2 id="version-1-0-0-initial">Version 1.0.0 (Initial)</h2>
+<h2 id="1-0-0-initial">1.0.0 (Initial)</h2>
 
 <ul>
 <li>Tealium universal data sources added for all dispatches:
@@ -6516,7 +6516,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  March 2, 2021 
+    <span>This page was last updated:  March 18, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
