--- a/platforms/nativescript/release-notes/index.html
+++ b/platforms/nativescript/release-notes/index.html
@@ -249,7 +249,8 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-0-1">Version 0.1</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#1-1-1-march-2021">1.1.1 (March 2021)</a></li>
+              <li><a href="#0-1-january-2021">0.1 (January 2021)</a></li>
               </nav>
   </aside></div>
 
@@ -290,9 +291,14 @@ var utag_data = {
 
 <p>Below is a complete list of changes for each release of the NativeScript plugin.</p>
 
-<h2 id="version-0-1">Version 0.1</h2>
+<h2 id="1-1-1-march-2021">1.1.1 (March 2021)</h2>
 
-<p><strong>Released:</strong> January 2021</p>
+<ul>
+<li>Update plugin with latest Tealium Kotlin and Swift libraries</li>
+<li>Added support for Consent Expiry</li>
+</ul>
+
+<h2 id="0-1-january-2021">0.1 (January 2021)</h2>
 
 <ul>
 <li>Initial Release</li>
@@ -6451,7 +6457,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 20, 2021 
+    <span>This page was last updated:  March 18, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
