--- a/platforms/react-native/release-notes/index.html
+++ b/platforms/react-native/release-notes/index.html
@@ -249,10 +249,10 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-2-0-3">Version 2.0.3</a></li>
-              <li><a href="#version-2-0-2">Version 2.0.2</a></li>
-              <li><a href="#version-2-0-1">Version 2.0.1</a></li>
-              <li><a href="#version-2-0-0">Version 2.0.0</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#2-0-3-march-2021">2.0.3 (March 2021)</a></li>
+              <li><a href="#2-0-2-february-2021">2.0.2 (February 2021)</a></li>
+              <li><a href="#2-0-1-february-2021">2.0.1 (February 2021)</a></li>
+              <li><a href="#2-0-0-january-2021">2.0.0 (January 2021)</a></li>
               </nav>
   </aside></div>
 
@@ -293,9 +293,7 @@ var utag_data = {
 
 <p>Below is a complete list of changes for each release of the React Native 2.x library.</p>
 
-<h2 id="version-2-0-3">Version 2.0.3</h2>
-
-<p><strong>Released:</strong> March 2021</p>
+<h2 id="2-0-3-march-2021">2.0.3 (March 2021)</h2>
 
 <p><strong>Low Impact Changes</strong></p>
 
@@ -309,9 +307,7 @@ var utag_data = {
 <li>SDK dependency and <code>package.json</code> increments</li>
 </ul>
 
-<h2 id="version-2-0-2">Version 2.0.2</h2>
-
-<p><strong>Released:</strong> February 2021</p>
+<h2 id="2-0-2-february-2021">2.0.2 (February 2021)</h2>
 
 <p><strong>Low Impact Changes</strong></p>
 
@@ -319,9 +315,7 @@ var utag_data = {
 <li>Bug Fix: Removed the <code>deinit</code> from the React Native Module in order to prevent the <code>EventEmitter</code> event names being cleared out on hot reload.</li>
 </ul>
 
-<h2 id="version-2-0-1">Version 2.0.1</h2>
-
-<p><strong>Released:</strong> February 2021</p>
+<h2 id="2-0-1-february-2021">2.0.1 (February 2021)</h2>
 
 <p><strong>Low Impact Changes</strong></p>
 
@@ -334,9 +328,7 @@ var utag_data = {
 </ul></li>
 </ul>
 
-<h2 id="version-2-0-0">Version 2.0.0</h2>
-
-<p><strong>Released:</strong> January 2021</p>
+<h2 id="2-0-0-january-2021">2.0.0 (January 2021)</h2>
 
 <p>Initial Release</p>
 
@@ -6493,7 +6485,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  March 8, 2021 
+    <span>This page was last updated:  March 18, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
