Update from master

--- a/platforms/getting-started/media/index.html
+++ b/platforms/getting-started/media/index.html
@@ -327,7 +327,7 @@ var utag_data = {
 A media session is a container for all of the other elements and it defines the general information about the streaming experience. A media session is a required element for tracking.</p>
 
 <p><strong>Chapter</strong><br />
-A chapter is an optional segment that separates the session as natural breaks occur in the content, such as chapters of an audiobook or scenes of a movie.</p>
+A chapter is an optional segment that separates the session as breaks occur in the content, such as chapters of an audiobook or scenes of a movie.</p>
 
 <p><strong>Ad Break</strong><br />
 An ad break is an optional container for one or more ads. An ad break is commonly positioned at the start, middle, or end of a session.</p>
@@ -417,7 +417,7 @@ An ad is an optional element that occurs within an ad break.</p>
 
 <tr>
 <td align="left"><a href="#interval-events">Interval</a></td>
-<td align="left"><code>milestoneInterval</code></td>
+<td align="left"><code>INTERVAL</code></td>
 <td align="left">Tracks standard media events and pings every 10 seconds to check if content is playing.</td>
 </tr>
 
