Update from master

--- a/platforms/adobe-launch/index.html
+++ b/platforms/adobe-launch/index.html
@@ -7157,7 +7157,7 @@ var utag_data = {
 
     <div class="lh-copy mid-gray links">
       
-          Learn to install Tealium Collect for Adobe Experience Platform Launch.
+          Learn to install Tealium Collect and Tealium Data Layer Enrichment for Adobe Experience Platform Launch.
         
     </div>
     </a>
