--- a/platforms/getting-started/feature-comparison/index.html
+++ b/platforms/getting-started/feature-comparison/index.html
@@ -388,6 +388,16 @@ var utag_data = {
 </tr>
 
 <tr>
+<td align="left">Location and Geofencing</td>
+<td align="left">✔</td>
+<td align="left">✔</td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+
+<tr>
 <td align="left">Media Tracking</td>
 <td align="left">✔</td>
 <td align="left">✔</td>
@@ -7524,7 +7534,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  May 13, 2021 
+    <span>This page was last updated:  July 22, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
