--- a/platforms/cordova-v1/release-notes/index.html
+++ b/platforms/cordova-v1/release-notes/index.html
@@ -249,7 +249,9 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#1-1-3">1.1.3</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#1-1-5">1.1.5</a></li>
+              <li><a href="#1-1-4">1.1.4</a></li>
+              <li><a href="#1-1-3">1.1.3</a></li>
               <li><a href="#1-1-2">1.1.2</a></li>
               <li><a href="#1-1-1">1.1.1</a></li>
               <li><a href="#1-1-0">1.1.0</a></li>
@@ -294,6 +296,19 @@ var utag_data = {
 <p>Below is a complete list of changes for each release of the Cordova library. See the file <a href="https://github.com/Tealium/cordova-plugin/blob/master/CHANGELOG.md">CHANGELOG.md</a> for full list of changes.</p>
 
 <p class="note">It is strongly recommended that you remove and re-add the plugin from your project for the 1.1.1 release.</p>
+
+<h2 id="1-1-5">1.1.5</h2>
+
+<ul>
+<li>Updated iOS dependency to fix code signing issue for TealiumIOSLifecycle framework.</li>
+</ul>
+
+<h2 id="1-1-4">1.1.4</h2>
+
+<ul>
+<li>Upgraded core SDKs to tealium-android 5.9.1 and tealium-ios 5.8.1</li>
+<li>Updated Android Gradle files to use https to support AndroidX</li>
+</ul>
 
 <h2 id="1-1-3">1.1.3</h2>
 
@@ -7309,7 +7324,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  July 7, 2021 
+    <span>This page was last updated:  August 23, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
