--- a/platforms/ios-objective-c/release-notes/index.html
+++ b/platforms/ios-objective-c/release-notes/index.html
@@ -249,7 +249,8 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#5-8-1-june-2021">5.8.1 (June 2021)</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#5-8-2-august-2021">5.8.2 (August 2021)</a></li>
+              <li><a href="#5-8-1-june-2021">5.8.1 (June 2021)</a></li>
               <li><a href="#5-8-0-february-2021">5.8.0 (February 2021)</a></li>
               <li><a href="#5-7-0-august-2020">5.7.0 (August 2020)</a></li>
               <li><a href="#5-6-6-january-2020">5.6.6 (January 2020)</a></li>
@@ -304,6 +305,16 @@ var utag_data = {
   
 
 <p>Below is a complete list of changes for each release of the iOS library.</p>
+
+<h2 id="5-8-2-august-2021">5.8.2 (August 2021)</h2>
+
+<p><strong>Low Impact Changes</strong></p>
+
+<ul>
+<li>Fixed issue with Lifecycle XCFramework file that prevented successful archiving of the enclosing app&rsquo;s .ipa file</li>
+<li>Carthage can now use XCFrameworks directly from the Github repo without requiring an intermediate JSON file (see  <a href="/platforms//ios-objective-c/install">Install</a>). Any existing Cartfile references must be updated.</li>
+<li>CocoaPods now uses XCFramework files</li>
+</ul>
 
 <h2 id="5-8-1-june-2021">5.8.1 (June 2021)</h2>
 
@@ -7501,7 +7512,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  June 10, 2021 
+    <span>This page was last updated:  August 23, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
