--- a/platforms/ios-swift/data-layer/index.html
+++ b/platforms/ios-swift/data-layer/index.html
@@ -1073,14 +1073,20 @@ var utag_data = {
 
 <tr>
 <td><code>device_resolution</code></td>
-<td>Screen resolution</td>
-<td><code>1080x1920</code></td>
+<td>Physical screen resolution in pixels (width x height)</td>
+<td><code>828x1792</code></td>
+</tr>
+
+<tr>
+<td><code>device_logical_resolution</code></td>
+<td>Logical screen resolution in points (width x height)</td>
+<td><code>414x896</code></td>
 </tr>
 
 <tr>
 <td><code>device_type</code></td>
 <td>Apple internal device identifier</td>
-<td><code>iPhone8,4</code></td>
+<td><code>iPhone12,1</code></td>
 </tr>
 
 <tr>
@@ -8394,7 +8400,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  May 10, 2021 
+    <span>This page was last updated:  September 8, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
