--- a/platforms/ios-swift/release-notes/index.html
+++ b/platforms/ios-swift/release-notes/index.html
@@ -249,7 +249,8 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#2-4-2-august-2021">2.4.2 (August 2021)</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#2-4-3-september-2021">2.4.3 (September 2021)</a></li>
+              <li><a href="#2-4-2-august-2021">2.4.2 (August 2021)</a></li>
               <li><a href="#2-4-1-july-2021">2.4.1 (July 2021)</a></li>
               <li><a href="#2-4-0-july-2021">2.4.0 (July 2021)</a></li>
               <li><a href="#2-3-2-june-2021">2.3.2 (June 2021)</a></li>
@@ -300,6 +301,18 @@ var utag_data = {
   
 
 <p>Below is a complete list of changes for each release of the Tealium for Swift library.</p>
+
+<h2 id="2-4-3-september-2021">2.4.3 (September 2021)</h2>
+
+<p><strong>Low Impact Changes</strong></p>
+
+<ul>
+<li>Improved encoding and decoding of data to reduce chances of failing and prevent tracking of some events.</li>
+<li>Added <code>device_logical_resolution</code> to the data layer.</li>
+<li>Avoided possible conflicts between Tealium managed geofences and application ones.</li>
+<li>Allowed DeepLinks to be handled before Tealium initialization is complete.</li>
+<li>Fixed a bug where changing <code>loggerType</code> in the configuration didn&rsquo;t reflect in the correct logger instance for custom loggers.</li>
+</ul>
 
 <h2 id="2-4-2-august-2021">2.4.2 (August 2021)</h2>
 
@@ -7478,7 +7491,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  August 4, 2021 
+    <span>This page was last updated:  September 8, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
