--- a/platforms/ios-swift/modules/index.html
+++ b/platforms/ios-swift/modules/index.html
@@ -394,13 +394,13 @@ config.collectors = [Collectors.AppData, Collectors.Lifecycle]                  
         [<span style="color:#b84">&#34;day_of_week&#34;</span>: dayOfWeek]
     }
 
-    <span style="font-weight:bold">var</span> <span style="color:#008080">config</span>: TealiumConfig
+    <span style="font-weight:bold">var</span> <span style="color:#008080">context</span>: TealiumContext
 
-    <span style="font-weight:bold">required</span> <span style="font-weight:bold">init</span>(config: TealiumConfig,
+    <span style="font-weight:bold">required</span> <span style="font-weight:bold">init</span>(context: TealiumContext,
                   delegate: ModuleDelegate?,
                   diskStorage: TealiumDiskStorageProtocol?,
                   completion: (ModuleResult) -&gt; <span style="color:#999">Void</span>) {
-        <span style="font-weight:bold">self</span>.config = config
+        <span style="font-weight:bold">self</span>.context = context
     }
 
     <span style="font-weight:bold">var</span> <span style="color:#008080">dayOfWeek</span>: <span style="color:#999">String</span> {
@@ -7553,7 +7553,7 @@ config.dispatchers = [Dispatchers.Collect]                               </code>
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  October 21, 2020 
+    <span>This page was last updated:  September 9, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
