--- a/platforms/getting-started/deep-linking/index.html
+++ b/platforms/getting-started/deep-linking/index.html
@@ -356,15 +356,29 @@ deep_link_param_campaign_code <span style="font-weight:bold">=</span> <span styl
 <tr>
 <td align="left"><code>deep_link_url</code></td>
 <td align="left"><code>String</code></td>
-<td align="left">Full URL of the deep link that launched the app including query parameters</td>
+<td align="left">The full URL of the deep link that opened the app, including query parameters.</td>
 <td align="left"><code>https://example.com/?campaign_code=SUMMER</code></td>
 </tr>
 
 <tr>
 <td align="left"><code>deep_link_param_X</code></td>
 <td align="left"><code>String</code></td>
-<td align="left">Each query parameter gets its own data layer entry, where <code>X</code> is the name of the parameter, such as <code>deep_link_param_campaign_code</code></td>
+<td align="left">Each query parameter of the deep link URL, where <code>X</code> is the name of the parameter, such as <code>deep_link_param_campaign_code</code>.</td>
 <td align="left"><code>SUMMER</code></td>
+</tr>
+
+<tr>
+<td align="left"><code>deep_link_referrer_url</code> (iOS)</td>
+<td align="left"><code>String</code></td>
+<td align="left">The full URL of the browser page where the deep link was clicked.</td>
+<td align="left"><code>https://www.example.com/referring/page</code></td>
+</tr>
+
+<tr>
+<td align="left"><code>deep_link_referrer_app</code> (iOS)</td>
+<td align="left"><code>String</code></td>
+<td align="left">The identifier of the referrer app when the deep link comes from a custom schema in another app signed by the same team.</td>
+<td align="left"><code>com.example.appId</code></td>
 </tr>
 </tbody>
 </table>
@@ -7366,7 +7380,7 @@ deep_link_param_campaign_code <span style="font-weight:bold">=</span> <span styl
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  October 20, 2020 
+    <span>This page was last updated:  September 28, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
