--- a/platforms/ios-swift/data-layer/index.html
+++ b/platforms/ios-swift/data-layer/index.html
@@ -846,6 +846,30 @@ var utag_data = {
 <td>Current Unix timestamp (1970 epoch) in milliseconds</td>
 <td><code>1511189280337</code></td>
 </tr>
+
+<tr>
+<td><code>deep_link_url</code></td>
+<td><code>String</code></td>
+<td>The full URL of the deep link that opened the app, including query parameters.</td>
+</tr>
+
+<tr>
+<td><code>deep_link_param_X</code></td>
+<td><code>String</code></td>
+<td>Each query parameter of the deep link URL, where <code>X</code> is the name of the parameter, such as <code>deep_link_param_campaign_code</code>.</td>
+</tr>
+
+<tr>
+<td><code>deep_link_referrer_url</code> (iOS)</td>
+<td><code>String</code></td>
+<td>The full URL of the browser page where the deep link was clicked.</td>
+</tr>
+
+<tr>
+<td><code>deep_link_referrer_app</code> (iOS)</td>
+<td><code>String</code></td>
+<td>The identifier of the referrer app when the deep link comes from a custom schema in another app signed by the same team.</td>
+</tr>
 </tbody>
 </table>
 
@@ -8400,7 +8424,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  September 8, 2021 
+    <span>This page was last updated:  September 28, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
