--- a/platforms/ios-swift/release-notes/index.html
+++ b/platforms/ios-swift/release-notes/index.html
@@ -249,7 +249,8 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#2-4-4-september-2021">2.4.4 (September 2021)</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#2-4-5-september-2021">2.4.5 (September 2021)</a></li>
+              <li><a href="#2-4-4-september-2021">2.4.4 (September 2021)</a></li>
               <li><a href="#2-4-3-september-2021">2.4.3 (September 2021)</a></li>
               <li><a href="#2-4-2-august-2021">2.4.2 (August 2021)</a></li>
               <li><a href="#2-4-1-july-2021">2.4.1 (July 2021)</a></li>
@@ -302,6 +303,31 @@ var utag_data = {
   
 
 <p>Below is a complete list of changes for each release of the Tealium for Swift library.</p>
+
+<h2 id="2-4-5-september-2021">2.4.5 (September 2021)</h2>
+
+<p><strong>High Impact Changes</strong></p>
+
+<ul>
+<li>Fixed a bug that prevented tracking on Apple Watches.</li>
+<li>Fixed a bug that prevented deep link tracking in the AppDelegate.</li>
+</ul>
+
+<p><strong>Medium Impact Changes</strong></p>
+
+<ul>
+<li>Fixed a bug that caused the lifecycle module to crash when migrating from the Objective-C library without the lifecycle module.</li>
+</ul>
+
+<p><strong>Low Impact Changes</strong></p>
+
+<ul>
+<li>Made <code>visitorServiceDelegate</code> and <code>webViewDelegates</code> weak references in the config to avoid potential memory leaks.</li>
+<li>Added a check to prevent two remote commands with the same <code>commandId</code>.</li>
+<li>Added the new keys <code>deep_link_referrer_app</code> and <code>deep_link_referrer_url</code> that are added when a deep link is automatically detected and a referrer is present, or when passed to the method <code>Tealium.handleDeepLink(_:referrer:)</code>.</li>
+<li>Improved handling of query parameters for deep links by removing old query parameters when receiving multiple deep links during the same session.</li>
+<li>Updated the list of device model names to include latest iPhone, iPad and Apple Watch models.</li>
+</ul>
 
 <h2 id="2-4-4-september-2021">2.4.4 (September 2021)</h2>
 
@@ -7505,7 +7531,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  September 9, 2021 
+    <span>This page was last updated:  September 28, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
